# tri-memory

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  bench_generate.py  bench_train.py  conftest.py  demo.py  go_nogo_out.txt  hybrid_025_out.txt  hybrid_075_out.txt  long_ctx_out.txt  profile.py  pyproject.toml  rnd_err3.txt  rnd_err4.txt  rnd_err5.txt  rnd_err6.txt  rnd_err7.txt  rnd_out3.txt  rnd_out4.txt  rnd_out6.txt  rnd_out7.txt  seq_tasks_out.txt  train.py  verify_random_targets_err.txt  verify_random_targets_out.txt
csrc/: trn_scan.py  trn_scan_kernel.cu
data/: 100m_scaling.json  baseline_wikitext2.json  compiled_training_multiseq.json  downstream_pretrained.json  downstream_results.json  engine_full_results.json  inference_latency.json  longctx_comparison.json  longctx_eval.json  lstm_baseline.json  math_v2_results.json  phase3_ablation.json  phase3_recall.json  postfix_benchmark.json  recall_benchmark.json  recall_focused.json  scale_full_1A_seed42.json  scale_full_1A_seed7.json  scale_full_1B_seed42.json  scale_full_2A_seed42.json  scale_full_2C_seed42.json  scale_smoke_1A_seed42.json  scaling_comparison.json  seqlen_throughput.json  training_throughput_compiled.json  transformer_baseline_wt103.json  trimemory_engine_wt103.json  walltime_ppl_compiled.json  wikitext103_train.json
docs/: ARCHITECTURE_DIAGRAMS.md  DISTILL.md  FINAL_VERDICT.md  GOAL_VALUE_ARCHITECTURE.md  INTEGRATION_llama_cpp.md  INTEGRATION_vLLM.md  MEMORY_CONSOLIDATION.md  PUBLIC_CLAIMS.md  RELEASE_CHECKLIST.md  TRI_MEMORY_ARCHITECTURE.md  TRI_MEMORY_BENCHMARKS.md  TRN_ARCHITECTURE_ANALYSIS.md  TRN_LIMITATIONS.md  TRN_MEMORY_INFRASTRUCTURE.md  TRN_PHASE7_VALIDATION_PLAN.md  VALIDATION_RESULTS.md
results/: bench_agent_history.csv  bench_needle_haystack.csv  bench_pattern_memory.csv  bench_stream_tasks.csv  eval_go_no_go.csv  eval_go_no_go_dual.csv  eval_go_no_go_trn.csv  gate_result.json  gate_result.md  gate_result_dual.json  gate_result_dual.md  gate_result_trn.json  gate_result_trn.md  go_nogo_copy_tf.csv  long_context_quality.csv  long_context_scaling.csv  long_context_scaling_validated.csv  w_sweep_comparison.csv
(+229 files in other folders)
