[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trimemory"
version = "0.1.0"
description = "Tri-Memory -- knowledge-state compiler with O(n) processing and constant-size generation state"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
keywords = ["sequence-model", "language-model", "rnn", "oscillator", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
data = [
    "tokenizers>=0.15",
    "nltk>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --import-mode=importlib"
