[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trimemory"
version = "0.1.0"
description = "Knowledge-state compiler for LLM agents -- resolves document authority, currentness, and conflict before inference"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "rag", "retrieval-augmented-generation", "llm-agent", "agent-memory",
    "long-context", "document-authority", "knowledge-state", "kv-cache",
    "memory-efficient", "retrieval", "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
data = [
    "tokenizers>=0.15",
    "nltk>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --import-mode=importlib"
